--- a/nextjs-smartcontract-lottery-fcc/package.json
+++ b/nextjs-smartcontract-lottery-fcc/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "nextjs-smartcontract-lottery-fcc",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "moralis": "^2.6.5",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-moralis": "^1.4.2"
-  },
-  "devDependencies": {
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
-  }
+    "name": "nextjs-smartcontract-lottery-fcc",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "moralis": "^1.8.0",
+        "next": "12.1.5",
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
+        "react-moralis": "^1.4.0",
+        "web3uikit": "^0.1.159"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.4",
+        "eslint": "8.13.0",
+        "eslint-config-next": "12.1.5",
+        "postcss": "^8.4.12",
+        "tailwindcss": "^3.0.24"
+    }
 }
